2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/transaction_base.cxx:
 - gcc 3.3 stumbles over foo_gate(bar).splat()
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Get ABI version as well as library version.
 - Single "substitute" function for configure.ac and version header.
 doc/Doxyfile.in:
 - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
 include/pqxx/result.hxx, include/pqxx/util.hxx src/connection_base.cxx,
 src/util.cxx:
 - Clean up deleter handling in PQAlloc, thanks Kirit Saelensminde.
 - Should fix a case of mismatched allocation/deallocation.
 include/pqxx/version.hxx.template:
 - Include ABI version.
 src/Makefile.am:
 - Version according to ABI version, not full library version.
 tools/extract_version:
 - New --abi option to extract library ABI version.
 - New --help option.
2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Fixed compile warnings on some 32-bit configurations.
2009-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
 - Fixed mistake in tutorial example.  Thanks Patrick Daryll Glandien.
 - Closes #187.
2009-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Don't build tarball again.
 - Deal with changed "make check" output.
 - Clean up and rebuild reference documentation.
2009-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/connection-dbtransaction-gate.hxx,
 include/pqxx/internal/connection-largeobject-gate.hxx, 
 include/pqxx/internal/connection-notify-listener-gate.hxx, 
 include/pqxx/internal/connection-pipeline-gate.hxx, 
 include/pqxx/internal/connection-prepare-declaration-gate.hxx, 
 include/pqxx/internal/connection-prepare-invocation-gate.hxx, 
 include/pqxx/internal/connection-sql_cursor-gate.hxx, 
 include/pqxx/internal/connection-transaction-gate.hxx, 
 include/pqxx/internal/result-connection-gate.hxx, 
 include/pqxx/internal/result-creation-gate.hxx, 